@@ -1,3 +1,8 @@
+2008-11-10  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
+	  Reoder function and modify initialisation sequence.
+
 2008-11-04  Stefan Kost  <ensonic@users.sf.net>
 
 	* dllwrapper1/wine/Makefile.am:
